Grid no longer stretches when text is added

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,7 @@
 .gameboard {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
     height: 40vh;
     width: 40vh;
     min-width: 275px;
@@ -19,4 +20,9 @@
 .item {
     border: 1px solid white;
     background: lightblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 6rem;
+    font-family: sans-serif;
 }
